--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
     <!-- Task URL Section -->
     <section id="Links" class="squircle-container">
-        <h2>✦Random Course Projects & Task Links</h2>
+        <h2>✦Task Links</h2>
         <p>
             Mini Project 1:
             <a href="https://hpahama.github.io/MainResume.html" style="text-decoration: none; color: inherit;">
